src/app/globals.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

@theme {
  --color-background: var(--background);
  --color-background-alt: var(--background-alt);
  --color-foreground: var(--foreground);
  --font-clarendon: "Clarendon", serif;
}

@font-face {
  font-family: "Clarendon Regular";
  font-style: normal;
  font-weight: normal;
  src: local("Clarendon Regular"),
    url("/fonts/Clarendon Regular.woff") format("woff");
}

@font-face {
  font-family: "Caslon";
  font-style: normal;
  font-weight: normal;
  src: local("Caslon"), url("/fonts/adobe-caslon-pro.woff") format("woff");
}

@font-face {
  font-family: "Garamond";
  font-style: normal;
  font-weight: normal;
  src: local("Garamond"), url("/fonts/EBGaramond-Reg.ttf") format("truetype");
}

@font-face {
  font-family: "Rockwell";
  font-style: normal;
  font-weight: normal;
  src: local("Rockwell"), url("/fonts/ROCK.ttf") format("truetype");
}

@font-face {
  font-family: "Rockwell";
  font-style: normal;
  font-weight: bold;
  src: local("Rockwell Bold"),
    url("/fonts/Rockwell-Bold.ttf") format("truetype");
}

@font-face {
  font-family: "Sabon";
  font-style: normal;
  font-weight: normal;
  src: local("Sabon"), url("/fonts/Sabon.ttf") format("truetype");
}

@font-face {
  font-family: "Trajan";
  font-style: normal;
  font-weight: normal;
  src: local("Trajan"), url("/fonts/TrajanPro-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Avant Garde";
  font-style: normal;
  font-weight: normal;
  src: local("Avant Garde"), url("/fonts/AVGARDN_2.ttf") format("truetype");
}

@font-face {
  font-family: "Bodoni";
  font-style: normal;
  font-weight: normal;
  src: local("Bodoni"), url("/fonts/bodoni.ttf") format("truetype");
}

:root {
  --background: #030712; /* gray-950 */
  --background-alt: #0f1822;
  --background-page: #2a1f1f;
  --background-hover: #663422;
  --text: #f5f4f0;
  --text-muted: #e5e4d9;
  --highlight: #8b6556;
  --map-color-white: #f5f4f0;
  --map-color-red: #ff6b6b;
  --map-color-purple: #b197fc;
}

[data-theme="dark"] {
  /* Dark theme */
  --background: #0f1822ff;
  --background-alt: #0f1822ff;
  --background-page: #2a1f1fff;
  --background-hover: #663422ff;
  --text: #f5f4f0;
  --text-muted: #e5e4d9;
  --highlight: #8b6556ff;
}

[data-theme="light"] {
  --map-color-white: #1f2937;
  --map-color-red: #c92a2a;
  --map-color-purple: #5f3dc4;
}

/* Georgia | Caslon | Garamond | Clarendon | Rockwell | Sabon | Trajan */

body {
  color: var(--text);
  background: var(--background);
  font-family: "Rockwell", sans-serif;
}

@keyframes hud-slide-up {
  from {
    opacity: 0;
    transform: translateY(12px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

